--- a/src/styles.css
+++ b/src/styles.css
@@ -2,34 +2,55 @@
     font-family: sans-serif;
     text-align: center;
   }
+
+  section.fileuploader {
+    padding: 20px 0;
+  }
   
   .form-container {
     display: flex;
+    justify-content: center;
+    margin: 10px 20px 100px;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 20px;
-    margin: 50px;
-    max-width: 100vw;
-    width: 100vw;
+    height: 100%;
+  }
+
+
+  header{ 
+    flex: 100%;
+    width: 100%;
+    text-align: center;
     justify-content: center;
   }
+
   
   .col-1 {
-    min-width: 60vw;
-    max-width: fit-content;
+    flex: 50%;
+    padding: 10px 30px;
   }
   
   .col-2 {
-    min-width: 40vw;
-    max-width: fit-content;
+    flex: 30%;
+    padding: 10px 30px;
   }
-  section.import {
-    display: flex;
-    min-width: 100vw;
-    width: 100vw;
-    padding: 50px;
-    justify-content: center;
+
+  /* Options */
+
+  select {
+    background-color: white;
+    color: midnightblue;
+    font-weight: bold;
+    width: 100%;
+    height: 30px;
+    font-size: 14px;
   }
+
+  option {
+    background-color: white;
+  }
+
+
   /* ToggleSwitch */
   
   .toggle {
@@ -116,11 +137,12 @@
   button,
   legend {
     color: white;
-    background-color: black;
-    padding: 5px 10px;
+    background-color: navy;
+    padding: 10px 20px;
     border-radius: 8px;
     border: 0;
     font-size: 14px;
+    font-weight: bold;
   }
   
   button:hover,
@@ -137,14 +159,15 @@
   .btn-container {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: center;
   }
   
   .import {
-    display: flex;
-    flex-direction: column;
+    flex: 100%;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    margin-top: 0px;
   }
   
   button.import-btn {
@@ -158,3 +181,17 @@
     border-radius: 8px;
     border: 1px solid orange;
   }
+
+.file-upload {
+  border: solid grey 1px;
+  text-align: center;
+  max-height: 200px;
+  border-radius: 8px;
+}
+
+.file-upload-area {
+  border: dashed grey 1px;
+  margin: 20px;
+  max-height: 150px;
+  border-radius: 8px;
+}
